<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:text="@string/relay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton1" />

    <ToggleButton
        android:text="@string/relay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton2" />

    <ToggleButton
        android:text="@string/relay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton3" />

    <ToggleButton
        android:text="@string/relay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:id="@+id/data_value" />
</LinearLayout>